--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
 								<h2 class="section-1__title light-title section-title">Подберем лучшую кухню</h2>
 								<h3 class="section-1__subtitle">Индивидуальные кухни любой сложности</h3>
 								<p class="section-1__text">
-									Наши дизайнеры спроектируют кухню с учётом ваших пожеланий и особенностей помещения.
-									Поможем избежать ошибок при проектировании и выборе материалов.
+									Наши дизайнеры спроектируют кухню с учётом ваших пожеланий и особенностей <br> помещения.
+									Поможем избежать ошибок при проектировании и выборе материалов.
 								</p>
 							</div>
 							<div class="section-1__content-wrapper">
